installed neotabs as bower component

--- a/components/jquery.neotabs.js/examples/dropdown-neotabs.html
+++ b/components/jquery.neotabs.js/examples/dropdown-neotabs.html
@@ -24,13 +24,13 @@
           </div>
 
           <div class=tabbody>
-            <h4 data-neotabs-active>Tabbody Heading 2</h4>
+            <h4>Tabbody Heading 2</h4>
 
             <p>Lorem Ipsum wakka wakka</p>
           </div>
 
           <div class=tabbody>
-            <h4>Tabbody Heading 3</h4>
+            <h4 data-neotabs-dropdown>Tabbody Heading 3</h4>
 
             <p>Lorem Ipsum wakka wakka</p>
           </div>
@@ -43,7 +43,7 @@
         </div>
 
         <script src=../components/jquery/jquery.js></script>
-        <script src=../components/jquery.neotabs.js/dist/jquery.neotabs.min.js></script>
+        <script src=../src/jquery.neotabs.js></script>
         <script>
           $('.tabs').neoTabs(/*{
             wrapperClass: 'content', // Classname of div to apply around the content
