--- a/components/jquery.neotabs.js/examples/pre-active-neotabs.html
+++ b/components/jquery.neotabs.js/examples/pre-active-neotabs.html
@@ -43,7 +43,7 @@
         </div>
 
         <script src=../components/jquery/jquery.js></script>
-        <script src=../components/jquery.neotabs.js/dist/jquery.neotabs.min.js></script>
+        <script src=../src/jquery.neotabs.js></script>
         <script>
           $('.tabs').neoTabs(/*{
             wrapperClass: 'content', // Classname of div to apply around the content
