--- a/components/jquery.neotabs.js/examples/css/styles.css
+++ b/components/jquery.neotabs.js/examples/css/styles.css
@@ -37,6 +37,11 @@ body {
   position: relative;
 }
 
+.dropdown.hidden-active a {
+  background-color: #333;
+  color: #fff;
+}
+
 .dropdown.active .tabs-list {
   display: block;
 }
